--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Library</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="reading">
+        <div class="shelf"></div>
+        <button class="new">Add</button>
+    </div>
+    <div class="read"></div>
 </body>
+
+<div class="card">
+    <p class="title"></p>
+    <p class="author"></p>
+    <p class="pages"></p>
+    <p class="status"></p>
+</div>
 </html>
