--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@
 </body>
 
 <div class="card">
-    <p class="title"></p>
-    <p class="author"></p>
-    <p class="pages"></p>
-    <p class="status"></p>
+    <div class="book">
+        <p class="title"></p>
+        <p class="author"></p>
+        <p class="pages"></p>
+        <p class="status"></p>
+    </div>
 </div>
+
+<dialog>
+    <form>
+        <label for="book-title">Title</label>
+        <input type="text" class="book-title" id="book-title" required>
+        <label for="book-author">Author</label>
+        <input type="text" class="book-author" id="book-author" required>
+        <label for="book-pages">Pages</label>
+        <input type="tel" class="book-pages" id="book-pages" required>
+        <button type="button" class="cancel">Cancel</button>
+        <button type="submit" class="add">OK</button>
+    </form>
+</dialog>
 </html>
