Complete functionality to remove books

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p class="pages"></p>
         <p class="status"></p>
     </div>
+    <button class="delete">Delete</button>
 </div>
 
 <dialog>
