Complete library logic

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <p class="status"></p>
     </div>
     <button class="delete">Delete</button>
+    <label for="">read</label>
+    <input type="checkbox" class="read-status">
 </div>
 
 <dialog>
