Added read checkbox to modal because i forgot to. Then battled with lots of bugs but logic should be fine now

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <input type="text" class="book-author" id="book-author" required>
         <label for="book-pages">Pages</label>
         <input type="tel" class="book-pages" id="book-pages" required>
+        <label for="is-read">read?</label>
+        <input type="checkbox" id="is-read" class="is-read">
         <button type="button" class="cancel">Cancel</button>
         <button type="submit" class="add">OK</button>
     </form>
